--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5,6 +5,7 @@ body {
     background-color: #000;
     color: #00FF00;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 100vh;
