--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -36,7 +36,6 @@ body {
     overflow-y: scroll;
     padding: 20px;
     box-sizing: border-box;
-    display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -76,6 +75,9 @@ body {
     flex-direction: column;
     align-items: center;
     gap: 5px;
+    position: absolute;
+    left: -48px;
+    top: 181px;
 }
 
 .d-pad div {
