--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -96,6 +96,7 @@ body {
 .d-pad-up {
     background-color: #111;
     position: relative;
+
 }
 .d-pad-down {
     background-color: #111;
@@ -104,12 +105,14 @@ body {
 .d-pad-left {
     background-color: #111;
     position: relative;
-    left: 20px;
+    right: 30px;
+    top: -58px;
 }
 .d-pad-right {
     background-color: #111;
     position: relative;
-    right: 20px;
+    left: 30px;
+    top: -96px;
 }
 
 .buttons-group {
