update img sizes

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -244,6 +244,11 @@ body {
     height: auto; /* Maintain aspect ratio */
 }
 
+.about_img, .skills__img {
+    max-width: 100%; /* Make sure images fit within their container */
+    height: auto; /* Maintain aspect ratio */
+}
+
 .button--small {
     font-size: 0.8em;
     padding: 3px 8px;
