--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -244,7 +244,11 @@ body {
     height: auto; /* Maintain aspect ratio */
 }
 
-.about_img, .skills__img {
+.skills__img {
+    max-width: 100%; /* Make sure images fit within their container */
+    height: auto; /* Maintain aspect ratio */
+}
+div .about__img img {
     max-width: 100%; /* Make sure images fit within their container */
     height: auto; /* Maintain aspect ratio */
 }
