--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -13,6 +13,12 @@ body {
     font-family: 'Press Start 2P', 'Arial', sans-serif; /* Adding a fallback font */
 }
 
+.container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
 .gameboy-advance {
     display: flex;
     align-items: center;
@@ -153,6 +159,26 @@ body {
     font-size: 1em;
 }
 
+/* Instructions styling */
+.instructions {
+    color: #FFF;
+    margin-left: 20px;
+}
+
+.instructions h2 {
+    font-size: 1.2em;
+}
+
+.instructions ul {
+    list-style: none;
+    padding: 0;
+}
+
+.instructions li {
+    font-size: 1em;
+    margin: 5px 0;
+}
+
 /* Content styling */
 .header__container, .footer__copy, .social__links, .footer-social {
     width: 100%;
@@ -289,21 +315,14 @@ body {
 
 /* Responsive design */
 @media (max-width: 768px) {
-    .gameboy-advance {
-        width: 100%;
-        height: auto;
-    }
-
-    .console-screen {
-        height: auto;
-    }
-
-    .header__container, .footer__copy, .social__links, .skills__container, .projects__container, .award__container, .footer-social {
-        flex-direction: column;
-    }
-
-    .nav__list, .footer-social {
+    .container {
         flex-direction: column;
         align-items: center;
+    }
+
+    .instructions {
+        margin-left: 0;
+        margin-top: 20px;
+        text-align: center;
     }
 }
