--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -29,7 +29,7 @@ body {
     width: 90%;
     max-width: 800px;
     position: relative;
-    margin: 0 auto;
+    margin: 50px auto;
 }
 
 .console-screen {
