--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -180,10 +180,16 @@ body {
 }
 
 /* Content styling */
-.header__container, .footer__copy, .social__links, .footer-social {
+.header__container, .footer__copy, .social__links {
     width: 100%;
     display: flex;
     flex-direction: column;
+    align-items: center;
+}
+
+.footer-social {
+    width: 100%;
+    display: flex;
     align-items: center;
 }
 
